--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,18 @@ background-image: url("https://i.insider.com/57e162c4077dccca798b4d9f?width=1700
   background-size: cover;
   background-position: center center;
 		}
+body::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  mix-blend-mode: multiply;
+  opacity: 0.4;
+}
 
 		header {
 			background-color: #333;
