--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ color: #fff;
 }
 
 		header {
-			
+			text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 			color: #fff;
 			padding: 20px;
 		}
