--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,10 @@ color: #fff;
 		}
 
 		nav {
-			background-color: #eee;
+			background-image: url('https://img.freepik.com/free-photo/brown-wooden-texture-flooring-background_53876-153336.jpg?w=360');
+  background-repeat: repeat-x;
+  background-size: cover;
+  padding: 10px;
 			padding: 10px;
 		}
 
