--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+}
+
+
+
+
+
+
 img {
   display: block; 
   margin: 0 auto; 
