--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,6 @@ html, body {
   min-height: 100%;
 }
 
-
-
-
-
-
 img {
   display: block; 
   margin: 0 auto; 
@@ -17,12 +12,10 @@ img {
 margin-bottom: 20px;
 opacity: 0.8;
 }
+
 		body {
 color: #fff;
-
-
-  
-  font-family: Arial, sans-serif;
+ font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background: none; /* remove the background color */
@@ -52,9 +45,12 @@ color: #fff;
 		}
 
 		nav ul {
-			list-style: none;
-			margin: 0;
-			padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
 		}
 
 		nav li {
