--- a/styles.css
+++ b/styles.css
@@ -51,18 +51,18 @@ color: #fff;
   display: flex;
   justify-content: center;
 }
-		}
+		
 
 		nav li {
-			display: inline-block;
-			margin-right: 400px;
-		}
+  display: inline-block;
+  margin-right: 2em;
+}
 
 		nav a {
   color: #fff;
   text-decoration: none;
   font-size: 18px;
-  padding: 5px;
+  padding: 2em;
   border-radius: 5px;
   transition: background-color 0.2s ease;
   background-color: #333;
