--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,9 @@ text-align: center;
     transform: scale(1.5);
   }
 label {
+font-size: 24px;
+			margin: 0;
+text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     text-align: center;
   width: 100%;
   }
@@ -138,3 +141,6 @@ label {
     margin: 0 auto;
     display: block;
   }
+div  {
+text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
