--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,9 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   color: #fff;h
 			padding: 20px;
 			text-align: center;
+position: fixed;
+  bottom: 0;
+  width: 100%;
 		}
 
 		footer p {
