--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ div  {
 text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-#chat-window {
+div#chat-window {
   width: 500px;
   height: 400px;
 }
