--- a/styles.css
+++ b/styles.css
@@ -145,10 +145,14 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     display: block;
   }
 div  {
+margin: 0 auto;
+width: 500px;
+  height: 400px;
 text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 div#chat-window {
+margin: 0 auto;
   width: 500px;
   height: 400px;
 }
