--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,6 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
 #input {
  margin: 0 auto;
-  width: 800px; /* increase the width value */
-  height: 600px; /* increase the height value */
+  width: 50%; /* increase the width value */
+  height: 300px; /* increase the height value */
 }
