--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,17 @@ nav a:hover {
   background-image: linear-gradient(to bottom, #555 0%, #444 100%);
   box-shadow: 0 2px 0 #222;
 }
+ 
+section ul {
+ color: #fff;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+font-size: 24px;
+}
+
 
 		section {
 text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
