--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ nav a:hover {
 }
  
 section ul {
- color: #fff;
+
   list-style: none;
   margin: 0;
   padding: 0;
@@ -86,8 +86,10 @@ section ul {
   justify-content: center;
 font-size: 24px;
 }
-
-
+section li {
+ color: #fff;
+  display: inline-block;
+ 
 		section {
 text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 			max-width: 800px;
