--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
 		section h2 {
 
-			font-size: 24px;
+			font-size: 30px;
 			margin: 0;
 		}
 
@@ -146,3 +146,8 @@ div  {
 text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+font-size: 24px;
+}
