--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,11 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 			font-size: 18px;
 			line-height: 1.5;
 		}
+section a {
+  display: block;
+  margin-bottom: 10px; /* Adjust the margin as needed */
+}
+
 
 		footer {
 			background-image: url('https://img.freepik.com/free-photo/brown-wooden-texture-flooring-background_53876-153336.jpg?w=360');
