--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,14 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 			font-size: 18px;
 			line-height: 1.5;
 		}
+p.email {
+  font-size: 20px;
+}
+
+p.phone {
+  font-size: 14px;
+}
+
 section a {
   display: block;
   margin-bottom: 10px; /* Adjust the margin as needed */
