--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
 		section h2 {
 
-			font-size: 30px;
+			font-size: 50px;
 			margin: 0;
 		}
 
@@ -142,6 +142,9 @@ position: fixed;
 		}
 h1,h2,p {
 text-align: center;
+}
+h3 {
+font-size: 30px;
 }
 	
   
