--- a/styles.css
+++ b/styles.css
@@ -97,12 +97,12 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
 		}
 
-		section h2 {
-
-			font-size: 50px;
-			margin: 0;
+section h2 {
+font-size: 50px;	 
 		}
-
+h3 {
+font-size: 30px;
+}
 		section p {
 
 			font-size: 18px;
