--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ color: #fff;
 background-image: url('https://img.freepik.com/free-photo/brown-wooden-texture-flooring-background_53876-153336.jpg?w=360');
 }
  width: 140px;
-height: 140
+height: 140px;
 .line {
   width: 100px;
   height: 15px;
