--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ ul#menuItems.hide {
 }
 
 ul#menuItems.show {
-background-color: #000;
+background-color: rgba(0, 0, 0, 0.5); /* Black color with 50% transparency */
   display: block;
 }
 
