--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ ul#menuItems.hide {
 ul#menuItems.show {
 background-color: rgba(0, 0, 0, 0.5); /* Black color with 50% transparency */
   display: block;
+list-style: none;
 }
 
  
