--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,10 @@ background-color: rgba(0, 0, 0, 0.5); /* Black color with 50% transparency */
   display: block;
 list-style: none;
 }
+ul#menuItems.show li {
+  border-bottom: 1px solid #ccc; /* Add a bottom border to each <li> element within ul#menuItems.show */
+  padding: 10px; /* Adjust padding as needed */
+}
 
  
 section ul {
