--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ border-radius: 10px;
 .line {
   width: 80%; /* Adjust the width of the lines as needed */
   height: 15px;
-  background-color: #000;
+  background-color: #fff;
   margin: 15px;
 }
 
