--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ color: #fff;
   margin: 0;
   padding: 0;
   background: none; /* remove the background color */
-  background-image: url("https://i.insider.com/57e162c4077dccca798b4d9f?width=1700&format=jpeg&auto=webp");
+  background-image: url("https://static.businessinsider.com/image/57e05ffab0ef9766008b6cea-2004/25_architecture_%C2%A9.jpg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
