--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,11 @@ ul#menuItems.show li {
 
  
 section ul {
-  display: block;
+  display: flex;
+  flex-direction: column;
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
   justify-content: center;
 font-size: 24px;
 }
