--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,13 @@ ul#menuItems.show li {
   border-bottom: 1px solid #ccc; /* Add a bottom border to each <li> element within ul#menuItems.show */
   padding: 10px; /* Adjust padding as needed */
 }
+ul.submenu {
+  display: none;
+}
+
+ul#menuItems.show .submenu {
+  display: block;
+}
 
  
 section ul {
