--- a/styles.css
+++ b/styles.css
@@ -212,10 +212,10 @@ button {
   width: 100%;
   padding: 5px;
 }
-#menuItems > li:nth-child(3) {
-  font-size: 40px; /* Adjust the font size as needed */
-color: white;
+
+#menuItems li {
+  font-size: 40px;
+  color: white;
   text-decoration: none;
-}
 
 
