--- a/styles.css
+++ b/styles.css
@@ -135,17 +135,6 @@ a {
   text-decoration: none;
 font-size: 40px;
 }
-.calculator {
-  width: 200px;
-  border: 1px solid #ccc;
-  padding: 10px;
-}
-
-#result {
-  width: 100%;
-  margin-bottom: 10px;
-}
-
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -154,8 +143,33 @@ font-size: 40px;
 
 button {
   width: 100%;
-  padding: 5px;
+  padding: 30px;
 }
+#result {
+  width: 100%;
+  margin-bottom: 10px;
+}
+    .calculator {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      width: 100%;
+      border: 1px solid #ccc;
+  padding: 10px;
+    }
+
+ .calculator input[type="text"] {
+      font-size: 50px;
+      padding: 20px;
+    }
+
+    /* Increase the size of the buttons */
+    .calculator button {
+      font-size: 100px;
+      padding: 60px 120px;
+    }
 .hamburger {
   cursor: pointer;
   width: 130px; /* Adjust the width as needed */
