--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, {
+html,body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -18,9 +18,7 @@ border-radius: 50px;
 		body {
 		
 color: #fff;
- f⁠o⁠n⁠t⁠-⁠f⁠a⁠m⁠i⁠l⁠y⁠:⁠ f⁠a⁠n⁠t⁠a⁠s⁠y⁠;
-  margin: 0;
-  padding: 0;
+font-family: Papyrus, fantasy, sans-serif;
   background: none; /* remove the background color */
   background-image: url("https://static.businessinsider.com/image/57e05ffab0ef9766008b6cea-2004/25_architecture_%C2%A9.jpg.jpg");
   background-repeat: no-repeat;
