--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ border-radius: 50px;
 }
 
 		body {
-      background: linear-gradient(to left, #000000, #ff3300);
+      background: linear-gradient(to left, #000000, #808080);
 background-repeat: no-repeat;
 background-size: cover;
 background-attachment: fixed;
