--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ z-index: 50;
 
 .container {
 display: flex;
-flex-direction: column;
+flex-direction: row;
 list-style: none;
   margin:  100px;
   padding: 0;
@@ -257,8 +257,8 @@ list-style: none;
 }
 
 .part {
-width: 300px;
-height: 300px;
+width: 100px;
+height: 100px;
 }
 
 
