--- a/styles.css
+++ b/styles.css
@@ -245,12 +245,17 @@ flex-direction: row;
 list-style: none;
   margin:  100px;
   padding: 0;
-  justify-content: center;
+justify-content: space-between;
+}
+
+.child {
+  margin: 10px; /* Adjust the value as per your desired spacing */
 }
 
 .part {
 width: 200px;
 height: 200px;
+margin: 100px;
 }
 
 
