--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,7 @@ html,body {
   min-height: 100%;
 }
 
-img {
-	z-index: 1;
-  max-width: 100%;
-  max-height: 100%;
-}
+
 
 		body {
       background: linear-gradient(to left, #000000, #808080);
@@ -250,6 +246,12 @@ justify-content: space-between;
 width: 200px;
 height: 200px;
 margin: 100px;
+}
+
+.part img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 
