--- a/styles.css
+++ b/styles.css
@@ -249,8 +249,9 @@ height: 200px;
 }
 
 .part img {
-  width: 100%;
-  height: 100%;
+  margin:10px
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
 }
 
