--- a/styles.css
+++ b/styles.css
@@ -239,8 +239,9 @@ z-index: 50;
 display: flex;
 flex-direction: row;
 list-style: none;
-  padding: 0;
 justify-content: space-around;
+width: 60%;
+flex-wrap: wrap;
 }
 .part {
 width: 150px;
