--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,24 @@ html,body {
   margin: 0;
   padding: 0;
   min-height: 100%;
+   display:flex;
+      justify-content: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+      background: linear-gradient(to left, #000000, #808080);
+background-repeat: no-repeat;
+background-size: cover;
+background-attachment: fixed;
+background-position: center center;
 }
 
 
 
 		body {
-      background: linear-gradient(to left, #000000, #808080);
-background-repeat: no-repeat;
-background-size: cover;
-background-attachment: fixed;
+flex-basis:80% 
 color: #fff;
 font-family: Papyrus, fantasy, sans-serif;
-  background-position: center center;
+  
 }
 
 		header {
