--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,10 @@
-html,body {
+html {
   height: 100%;
   margin: 0;
   padding: 0;
   min-height: 100%;
-   display:flex;
-      justify-content: center;
-      flex-direction: row;
-      flex-wrap: wrap;
-      background: linear-gradient(to left, #000000, #808080);
+   
+background: linear-gradient(to left, #000000, #808080);
 background-repeat: no-repeat;
 background-size: cover;
 background-attachment: fixed;
@@ -17,7 +14,13 @@ background-position: center center;
 
 
 		body {
-flex-basis:80% 
+
+      width 
+      display:flex;
+      justify-content: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+
 color: #fff;
 font-family: Papyrus, fantasy, sans-serif;
   
