--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,20 @@ align-items: center;
   align-content: space-between;
 color: #fff;
 font-family: Papyrus, fantasy, sans-serif;
-  
+  text-align: center;
 }
 
 
 h1 {
+  text-align: center;
 font-size: 50px;
 }
 h2 {
+  text-align: center;
 font-size: 40px;	 
 }
 h3 {
+  text-align: center;
 font-size: 30px;
 }
 
@@ -58,6 +61,7 @@ position: fixed;
   
 
 a {
+  text-align: center;
   color: white;
   text-decoration: none;
 font-size: 40px;
