--- a/styles.css
+++ b/styles.css
@@ -140,9 +140,9 @@ margin: 20px;
 }
 
 .toggle-line {
-  width: 25px;
-  height: 3px;
-  background-color: #000;
+  width: 70px;
+  height: 11px;
+  background-color: #FFFFFF;
   margin-bottom: 5px;
 }
 
