--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,23 @@ font-family: Papyrus, fantasy, sans-serif;
 
 h1 {
   text-align: center;
-font-size: 50px;
+font-size: 100px;
 }
 h2 {
   text-align: center;
-font-size: 40px;	 
+font-size:  60px;	 
 }
 h3 {
   text-align: center;
 font-size: 30px;
 }
+
+p {
+  font-size: 25px;
+  }
+
+
+
 section {
   display:flex;
       justify-content: center;
