--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,11 @@ background: linear-gradient(to left, #000000, #808080);
 background-repeat: no-repeat;
 background-size: cover;
 background-attachment: fixed;
-}
-
-body {
+}       
+    
+iframe.d {
+  }
+body.a{
       display:flex;
       justify-content: center;
       flex-direction: column;
@@ -17,83 +19,96 @@ color: #fff;
 font-family: Papyrus, fantasy, sans-serif;
   text-align: center;
 }
+header.b {
+display:flex;
+justify-content: center;
+flex-direction: column;
+flex-wrap: wrap;
+align-items: center;
+text-align: center;
+}
+
+main.b {
+display:flex;
+justify-content: center;
+flex-direction: column;
+flex-wrap: wrap;
+align-items: center;
+text-align: center;
+}
+
+footer.b {
+  display:flex;
+justify-content: center;
+flex-direction: column;
+flex-wrap: wrap;
+align-items: center;
+text-align: center;
+  }
+  
+  
+  div.c {
+    display:flex;
+justify-content: center;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: center;
+text-align: center;
+    }
+    
+    img.d{
+    margin: 40px;
+    }
+    
+  img.e{
+    margin: 40px;
+    }
+    
+    img {
+      margin: 40px;
+    }
+                       div.d {
+display:flex;
+justify-content: center;
+flex-direction: column;
+flex-wrap: wrap;
+align-items: center;
+text-align: center;
+}
 
 
-h1 {
+
+h1.c{
   text-align: center;
 font-size: 100px;
 }
-h2 {
+h2.d{
   text-align: center;
 font-size:  60px;	 
 }
-h3 {
-  text-align: center;
-font-size: 30px;
-}
 
-p {
+
+p.d {
   text-align: center;
   font-size: 25px;
   }
 
-
-
-section {
-  display:flex;
-      justify-content: center;
-      flex-direction: column;
-      flex-wrap: wrap;
+section.c {
+display:flex;
+justify-content: center;
+flex-direction: row;
+flex-wrap: wrap;
 align-items: center;
- text-align: center;
+text-align: center;
 }
  
-		
-p.email {
-  font-size: 40px;
-}
-
-p.phone {
-  font-size: 40px;
-  }
-  
-
-a {
+a.d {
   text-align: center;
   color: white;
   text-decoration: none;
 font-size: 40px;
 }
 
-.follow {
-  display:flex;
-      flex-direction: row;
-  justify-content: space-around;
-}
-.smicon {
-  margin: 40px;
- }
-
-
-.container {
-display: flex;
-flex-direction: row;
-list-style: none;
-justify-content: space-around;
-width: 100%;
-flex-wrap: wrap;
-}
-.part {
-width: 150px;
-height: 150px;
-margin: 20px;
-}
-
-.part img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
 
 
 
