--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ text-align: center;
   div.c {
     display:flex;
 justify-content: center;
-flex-direction: row;
+flex-direction: column;
 flex-wrap: wrap;
 align-items: center;
 text-align: center;
@@ -67,13 +67,12 @@ text-align: center;
     img {
       margin: 40px;
     }
-                       div.d {
-display:flex;
-justify-content: center;
-flex-direction: column;
-flex-wrap: wrap;
-align-items: center;
-text-align: center;
+
+
+div.d {
+width:200px;
+height:200px;
+margin:30px;
 }
 
 
@@ -96,18 +95,13 @@ p.d {
 section.c {
 display:flex;
 justify-content: center;
-flex-direction: row;
+flex-direction: column;
 flex-wrap: wrap;
 align-items: center;
 text-align: center;
 }
  
-a.d {
-  text-align: center;
-  color: white;
-  text-decoration: none;
-font-size: 40px;
-}
+
 
 
 
