--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,11 @@ section.c {
 display:grid;
 grid-template-rows: 1fr 1fr 1fr;
 }
- 
+section.comp {
+display:grid;
+grid-template-rows: 1fr 1fr 1fr 1fr;
+grid-template-columns: 1fr 1fr 1fr 1fr;
+}
 
 
 
