--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,55 @@
+html {
+  height: 100%;
+  min-height: 100%;
+background: linear-gradient(to left, #000000, #808080);
+background-repeat: no-repeat;
+background-size: cover;
+background-attachment: fixed;
+}       
+    
+iframe {
+  }
+body{
+color: #fff;
 
+}
+header {
+
+}
+
+main{
+
+}
+
+footer{
+  
+  }
+  
+  
+  div.selfportrait {
+      
+    }
+    
+    img {
+      margin: 40px;
+      width: 200px;
+      height:200px;
+      }
+
+h1{
+  text-align: center;
+font-size: 100px;
+}
+h2{
+  text-align: center;
+font-size:  60px;	 
+}
+
+
+p {
+  text-align: center;
+  font-size: 25px;
+  }
 
 
 
