--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,11 @@ flex-direction: row;
 flex-wrap: wrap;
 justify-content: center;
 }
+
+div.f {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+}
+
