--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,11 @@ display: flex;
 flex-direction: column;
 align-items: center;
 }
+
+div.cechild {
+  margin: 20px; 
+}
+
 img.ce {
 width: 100%; 
 height: 850px;
