--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,20 @@ footer{
       width: 200px;
       height:200px;
       }
-
-h1{
-  text-align: center;
-font-size: 100px;
-}
+.container {
+  width: 100% ;
+  height: 100vh;
+  background: #2b323c;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  }
+.container h1 {
+  font-size: 80px;
+  font-weight: 600;
+  }
 h2{
   text-align: center;
 font-size:  60px;	 
