--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,10 @@ footer{
       width: 200px;
       height:200px;
       }
+      
 .container {
   width: 100% ;
-  height: 100vh;
+  height: 150px;
   background: #2b323c;
   color: #fff;
   display: flex;
@@ -50,7 +51,7 @@ footer{
   
   }
 .container h1 {
-  font-size: 80px;
+  font-size: 90px;
   font-weight: 600;
   }
 h2{
