--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ footer{
 .container {
   width: 100% ;
   height: 150px;
-  background: #2b323c;
+  background: #000000;
   color: #fff;
   display: flex;
   align-items: center;
