--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,11 @@ footer{
   font-size: 90px;
   font-weight: 600;
   }
-h2{
-  text-align: center;
-font-size:  60px;	 
+  .container h2 {
+  font-size: 90px;
+  font-weight: 600;
+  }
+
 }
 h3{
   text-align: center;
