--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
 html {
   height: 100%;
   min-height: 100%;
-background: linear-gradient(to left, #000000, #808080);
-background-repeat: no-repeat;
-background-size: cover;
-background-attachment: fixed;
 }       
     
 iframe {
   }
 body{
+height: 100%;
+min-height: 100%;
+background-repeat: no-repeat;
+background-size: cover;
+background-attachment: fixed;
 color: #fff;
 
 }
