--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,15 @@ html {
     
 iframe {
   }
-body{
-height: 100%;
-min-height: 100%;
-background-repeat: no-repeat;
-background-size: cover;
-background-attachment: fixed;
+
+#body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
 color: #fff;
 
 }
