--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@ html {
   min-height: 100%;
 }       
 #animation-wrapper {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: -1;
+  min-height: 100%;
 }
 
 #animation-wrapper canvas {
