--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,23 @@
-html {
+html, body {
   height: 100%;
-  min-height: 100%;
-}       
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+}
+
 #animation-wrapper {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  min-height: 100%;
+  pointer-events: none;
 }
 
 #animation-wrapper canvas {
@@ -16,13 +25,19 @@ html {
   height: 100% !important;
 }
 
-#body {
-  height: 100%;
-  min-height: 100%;
-  left:150px;
-  right:150px;
-color: #fff;
-}
+/* Rest of your CSS styles */
+
+
+
+
+
+
+
+
+
+
+
+
 header {
 display: flex;
 flex-direction: column;
