--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
   position: relative;
 }
 
-
 header {
 display: flex;
 flex-direction: column;
@@ -21,89 +20,38 @@ flex-direction: column;
 align-items: center;
 }
 
-
-    
-    img.co {
-      margin: 40px;
-      width: 200px;
-      height:200px;
-      }
-      
-.container {
-  width: 100% ;
+  div {
+    width: 100% ;
   height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+   text-align: center;
   }
-.container h1 {
+    
+   h1 {
   font-size: 60px;
   font-weight: 600;
   }
-  .container h2 {
+  
+  h2 {
   font-size: 70px;
   font-weight: 600;
   }
- .container h3 {
+  
+ h3 {
   font-size: 60px;
   font-weight: 600;
   }
 
- .container p {
+ p {
   font-size: 40px;
   font-weight: 600;
   }
 
 
-p {
-  text-align: center;
-  font-size: 40px;
-  }
-
-div.ce {
-display: flex;
-flex-direction: column;
-align-items: center;
-}
-
-div.cechild {
-  margin: 20px; 
-}
-
-img.ce {
-width: 100%; 
-height: 850px;
- }
-
-div.co {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: center;
-}
 
 
 
-div.f{
-  display: table;
-  margin: 0 auto;
-  border-spacing: 100px;
-}
 
-a.d{
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-}
-
-img.e{
-  max-width: 100%;
-  height: auto;
-}
-
- #selfportrait {
-  width: 300px;
-height: 600px;
-}
 
