--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ align-items: center;
   div {
     width: 100% ;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
    text-align: center;
