--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 	animation-timing-function: ease; 
 	animation-delay: 2s;
 	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
 
 @keyframes colorchange {
