--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body {
 
 @keyframes colorchange {
 	0% {background-color: red; color:white;}
-  25% {background-color:white; color:black;}
-	50% {background-color: black; color:white;}}
+ 25% {background-color:white; color:black;}
+	50% {background-color: black; color:white;}
+	75% {background-color: green; color:white;}
 	100% {background-color: blue; color:white;}
 }
 
@@ -85,13 +86,23 @@ width: 100px;
 height:100px;
 }
 .imgcert {
-  width: 70%;
-  height: 550px;
   margin: 20px;
 padding: 20px;
+animation-name: imagesize;
+	animation-duration: 10s;
+	animation-timing-function: ease; 
+	animation-delay: 2s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
-  
 
+@keyframes imagesize {
+  0% {width: 50%; height: 300px;}
+	25% {width: 70%; height: 550px;}
+	50% {width: 80%; height: 700px;}
+	75% {width: 85%; height: 780px;}
+	100% {width: 90%; height: 850px;}
+}
 
 
 
