--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,32 @@ align-items: center;
   font-weight: 600;
   padding: 50px;
   margin: 50px;
+		animation-name: movearound;
+	animation-duration: 5s;
+	animation-timing-function: linear;
+	animation-delay: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: normal;
   }
   
   h2 {
+			animation-name: movearound;
+	animation-duration: 5s;
+	animation-timing-function: linear;
+	animation-delay: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: normal;
   font-size: 70px;
   font-weight: 600;
   }
   
  h3 {
+		animation-name: movearound;
+	animation-duration: 5s;
+	animation-timing-function: linear;
+	animation-delay: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: normal;
   font-size: 60px;
   font-weight: 600;
   }
@@ -67,6 +85,12 @@ align-items: center;
   padding: 50px;
   margin: 50px;
   text-align: center;
+		animation-name: movearound;
+	animation-duration: 5s;
+	animation-timing-function: linear;
+	animation-delay: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: normal;
   }
 
 iframe {
@@ -104,6 +128,14 @@ animation-name: imagesize;
 	100% {width: 90%; height: 850px;}
 }
 
+@keyframes movearound  { 
+0% {transform: translateY(0)translateX(0);}
+25% {transform: translateY(100px)translateX(0);}
+50% {transform: translateY(100px)translateX(100px);}
+75% {transform: translateY(0px)translateX(100px);}
+}
+100% {transform: translateY(0px)translateX(0px);}
+}
 
 
 
