--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ align-items: center;
   margin: 50px;
   text-align: center;
 		animation-name: movearound;
-	animation-duration: 5s;
+	animation-duration: 10s;
 	animation-timing-function: linear;
 	animation-delay: 0s;
 	animation-iteration-count: infinite;
@@ -89,6 +89,12 @@ margin: 20px;
 padding: 20px;
 width: 61%;
 height: 850px;
+animation-name: movearound;
+	animation-duration: 7s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
 
 #logo {
