--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ html, body {
   height: 100%;
 }
 
+  opacity: 0.5;
+
 body {
   margin: 0;
   padding: 0;
@@ -85,6 +87,7 @@ align-items: center;
   }
 
 iframe {
+opacity: 0.5;
 margin: 20px;
 padding: 20px;
 width: 61%;
@@ -100,13 +103,16 @@ animation-name: movearound;
 #logo {
 width: 200px;
 height:300px;
+opacity: 0.5;
 }
 
 #nw {
 width: 100px;
 height:100px;
+opacity: 0.5;
 }
 .imgcert {
+  opacity: 0.5;
   margin: 20px;
 padding: 20px;
 animation-name: imagesize;
